fix faetured image on mobile safari

--- a/inc/css/etisalat.css
+++ b/inc/css/etisalat.css
@@ -630,118 +630,6 @@ body {
 
 /* -----------------------------
 
-     Post Author / Sponsor Box
-             
-------------------------------- */
-.post-author {
-  height: 50px;
-  position: relative;
-  display: inline-block;
-  margin-bottom: 20px;
-  margin-right: 35px;
-  font-family: "Lato", "Helvetica Neue", Arial, sans-serif;
-  letter-spacing: normal;
-}
-
-.pa__image {
-  height: 50px;
-  width: 50px;
-  margin-right: 10px;
-  float: left;
-  overflow: hidden;
-}
-
-.pa__image a {
-  display: block;
-  height: 100%;
-  width: 100%;
-}
-
-.pa__image img {
-  min-width: 100%;
-  height: 100%;
-  width: auto;
-}
-
-.pa__text {
-  margin-bottom: 10px;
-  display: inline-block;
-  font-weight: 600;
-  padding: 0;
-  height: 50px;
-}
-
-.pa__text__title {
-  background-color: #f0f0f0;
-  color: #8235b6;
-  font-size: 1.2rem;
-  line-height: 1;
-  position: relative;
-  top: 0;
-  display: inline-block;
-  padding: 2px 5px;
-  margin-bottom: 5px;
-  width: auto;
-  vertical-align: top;
-}
-
-.pa__text__name {
-  display: block;
-}
-
-@media screen {
-  .pa__text__name {
-    font-size: 14px;
-  }
-}
-
-.pa__text__name a {
-  color: #000;
-}
-
-/* -----------------------------
-
-          Post Footer
-             
-------------------------------- */
-.mega-related-posts article {
-  float: left;
-  background-color: #f0f0f0;
-  width: 31%;
-  padding: 0;
-  margin-right: 1%;
-  margin-left: 1%;
-  margin-bottom: 20px;
-  height: 300px;
-}
-
-.mega-related-posts article .entry-excerpt--image {
-  height: 170px;
-  overflow: hidden;
-}
-
-.mega-related-posts article .entry-excerpt--entry {
-  padding: 0 10px 10px 10px;
-  background-color: transparent;
-}
-
-@media screen and (max-width: 960px) {
-  .mega-related-posts article {
-    width: 48%;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .mega-related-posts article {
-    width: 100%;
-    margin-right: 0;
-    margin-left: 0;
-    margin-bottom: 10px;
-  }
-}
-
-/* -----------------------------
-
       .entry-full.content
              
 ------------------------------- */
