--- a/inc/css/sponsorhomepage.css
+++ b/inc/css/sponsorhomepage.css
@@ -571,9 +571,12 @@ body {
     position: relative;
     display: block;
     width: 100%;
+    height: auto;
   }
   .entry-excerpt--1 .entry-excerpt--image img, .entry-excerpt--3 .entry-excerpt--image img {
     width: 100%;
+    max-width: 100%;
+    min-height: auto;
     height: auto;
     margin-bottom: -10px;
   }
@@ -605,6 +608,7 @@ body {
   padding-bottom: 10px;
 }
 
+/* Entry Excerpt Format 3 */
 .entry-excerpt--3 .entry-excerpt--title {
   padding-bottom: 10px;
 }
